# wasm-testbench

./: .editorconfig  .gitignore  README.adoc  makefile  settings.gradle
java-api/: build.gradle
java-api/src/main/java/org/example/: Module.java  ModuleRunner.java  Options.java
java-chicory/: README.adoc  build.gradle
java-chicory/src/main/java/org/example/: ChicoryModuleRunner.java  ModuleRunner.java  RubyRunner.java
java-chicory/src/test/java/org/example/: ChicoryModuleRunnerTest.java  ModuleRunnerTest.java  RubyRunnerTest.java
java-counterpart/: README.adoc  build.gradle
java-counterpart/src/main/java/org/demos/: RandomPrinter.java
java-wasmer/: build.gradle
java-wasmer/src/main/java/org/example/: WasmerModuleRunner.java
java-wasmer/src/test/java/org/example/: WasmerModuleRunnerTest.java
ruby/: hello.rb
rust/: Cargo.toml  build.gradle
rust/src/: hello.rs  library.rs  random_numbers.rs
