[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "random_numbers"
path = "src/random_numbers.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"

[lib]
name = "library"
crate-type = ["cdylib"]
path = "src/library.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.95"
